# MyFirstProject

./: .breakpoints  pyproject.toml
API/: main.py
Curso de lógica de programação/: abc1.py  aula1.py  aula2.py  aula3.py  aula4.py  projeto1.py  projeto2.py  projeto3.py
Curso python/Exercícios - 2 Semana/: exercicio1.py  exercicio2.py  exercicio3.py  exercicio4.py
Curso python/Exercícios - 3 Semana/: FizzBuzz1.py  baskara.py  booleano.py  entrada.py  fizzbuzz2.py  fizzbuzz3.py  impar.py  imparpar.py  ordenacao.py
Curso python/Exercícios - 4 Semana/: ex2.py  uri1113.py  while.py  while2.py
ProjetosEmPython/Simulador de Dado/: simulador_de_dado.py
dev_aprende/: booleanos.py  cadastre.py  classe.py  colecoes.py  condicionais.py  execoes.py  funcoes.py  string.py  turtle.py  variaveis.py
dev_aprende/modulo/: app.py  processamento.py
uri/: uri1114.py  uri1115.py  uri1117.py
