[tool.poetry]
name = "myfirstproject"
version = "0.1.0"
description = ""
authors = ["LucasRocha35 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
